Bug 1304243, scroll the current item into view when opening a menulist after it gets positioned so that it scrolls properly if the popup gets cropped, r=ksteuber a=ritu